plugins {
    id 'java'
    id 'application'
}

java {
    sourceCompatibility = JavaVersion.VERSION_21
    targetCompatibility = JavaVersion.VERSION_21
}

tasks.withType(JavaCompile) {
    options.compilerArgs << '-parameters'
}

repositories {
    ivy {
        ivyPattern "https://sissource.ethz.ch/openbis/openbis-public/openbis-ivy/-/raw/main/[organisation]/[module]/[revision]/ivy.xml"
        artifactPattern "https://sissource.ethz.ch/openbis/openbis-public/openbis-ivy/-/raw/main/[organisation]/[module]/[revision]/[artifact]-[revision](-[classifier]).[ext]"
    }
//    mavenCentral()
}

dependencies {
                // Ro-crate library
    implementation 'edu.kit.datamanager:ro-crate-java:2.0.1',
                    'com.fasterxml.jackson.core:jackson-core:2.18.3',
                    'com.fasterxml.jackson.core:jackson-databind:2.18.3',
                    // Command Line App
                    'apache:commons-collections4:4.1',
                    'commons-cli:commons-cli:1.4',
                    // Our libraries
                    project(':api-openbis-java'),
                    project(':lib-ro-crate'),
                    project(':lib-rdf')

    testImplementation 'junit:junit:4.10', 'hamcrest:hamcrest-core:1.3', 'hamcrest:hamcrest-library:1.3'
}


test {
    useJUnit();
    systemProperty "java.awt.headless", "true";
    jvmArgs "-Djava.awt.headless=true"
}
